Updates to error graphs

--- a/documents/CameraModel.tex
+++ b/documents/CameraModel.tex
@@ -139,7 +139,7 @@ The calibration parameters are discovered by using an open source implementation
     \label{fig:camera_calibration}
 \end{figure}
 
-\subsection{State Measurements}
+\subsection{Naive Position Estimates}
 
 The observed state consists of the image coordinates of the object and its width in pixels. From the notation derived above, the observed state is represented by the vector $\bf{y} = \mat{ x_u & y_u & d_u }$, where $(x_u, y_u)$ is the location of the center of the object in the undistorted camera image and $d_u$ is its width in pixels. 
 
