--- a/documents/references.bib
+++ b/documents/references.bib
@@ -55,4 +55,33 @@
   note = {Accessed: 2016-03-19},
 }
 
+@inproceedings{bradski1998,
+  title={Real time face and object tracking as a component of a perceptual user interface},
+  author={Bradski, Gary R},
+  booktitle={Applications of Computer Vision, 1998. WACV'98. Proceedings., Fourth IEEE Workshop on},
+  pages={214--219},
+  year={1998},
+  organization={IEEE}
+}
 
+@article{flash1985,
+  title={The coordination of arm movements: an experimentally confirmed mathematical model},
+  author={Flash, Tamar and Hogan, Neville},
+  journal={The journal of Neuroscience},
+  volume={5},
+  number={7},
+  pages={1688--1703},
+  year={1985},
+  publisher={Soc Neuroscience}
+}
+
+@article{haralick1996,
+  title={Propagating covariance in computer vision},
+  author={Haralick, Robert M},
+  journal={International journal of pattern recognition and artificial intelligence},
+  volume={10},
+  number={05},
+  pages={561--572},
+  year={1996},
+  publisher={World Scientific}
+}
